act: Update for basic marker C++ file
Add executable, target, and dependencies for add_markers_p1 which showcases the basic marker visualization: Pickup zone - wait for 5s - disappear - wait for 5s - reappear at dropoff zone

--- a/add_markers/CMakeLists.txt
+++ b/add_markers/CMakeLists.txt
@@ -203,3 +203,7 @@ include_directories(
 add_executable(add_markers src/add_markers.cpp)
 target_link_libraries(add_markers ${catkin_LIBRARIES})
 add_dependencies(add_markers add_markers_generate_messages_cpp)
+
+add_executable(add_markers_p1 src/add_markers_p1.cpp)
+target_link_libraries(add_markers_p1 ${catkin_LIBRARIES})
+add_dependencies(add_markers_p1 add_markers_generate_messages_cpp)
